[WangMin] fix-4: delete the overflow attribution set on multi-column which makes the triangle hidden

--- a/index.css
+++ b/index.css
@@ -141,8 +141,7 @@ body, h1, h6, p {
   font-family: serif;
   font-size: 12px;
   column-count: 3;
-  column-gap: 16px;
-  overflow: hidden;
+  column-gap: 15px;
 }
 
 .p-multi > p {
